# Contribution-Matcher

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  contribution_matcher.db  dev_profile.json.encrypted  dev_profile_gw0.json  dev_profile_gw4.json  docker-compose.yml  main.py  nixpacks.toml  package-lock.json  pyproject.toml  pytest.ini  railway.json  requirements-ml.txt  requirements.in  requirements.txt
.github/workflows/: cd.yml  ci.yml  daily-discovery.yml
backend/: Procfile  alembic.ini  contribution_matcher.db  requirements-api.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20231129_0001_initial_schema.py  20241130_0001_performance_indexes.py  20241202_0001_profile_source_tracking.py  20241210_0001_performance_optimizations.py  455e55f862ec_enhance_user_ml_models.py  a7c77f9efcb6_add_issue_feature_cache.py  b8fc862e3324_add_staleness_columns.py
backend/app/: __init__.py  config.py  database.py  error_handlers.py  main.py  models.py  schemas.py
backend/app/auth/: dependencies.py  github_oauth.py  jwt.py
backend/app/dependencies/: __init__.py  rate_limit.py
backend/app/middleware/: request_id.py  security.py
backend/app/routers/: __init__.py  auth.py  issues.py  jobs.py  ml.py  profile.py  scoring.py
backend/app/scheduler/: __init__.py  jobs.py
backend/app/services/: __init__.py  feature_cache_service.py  issue_service.py  matching_service.py  ml_service.py  profile_service.py  scoring_service.py  staleness_service.py
contribution_matcher/: __init__.py  config.py
contribution_matcher/api/: __init__.py  github_api.py
contribution_matcher/cli/: __init__.py  contribution_matcher.py
contribution_matcher/database/: __init__.py  database.py  database_queries.py
contribution_matcher/parsing/: __init__.py  issue_parser.py  skill_extractor.py
contribution_matcher/profile/: __init__.py  dev_profile.py
contribution_matcher/scoring/: __init__.py  issue_scorer.py  ml_trainer.py
core/: __init__.py  _database_manager.py  config.py  constants.py  db.py  logging.py
core/api/: __init__.py  github_api.py  public_api.py
core/cache/: __init__.py  cache_keys.py  decorators.py  redis_client.py
core/cli/: __init__.py  contribution_matcher.py  db_helpers.py  formatters.py
core/database/: __init__.py  database.py
core/models/: __init__.py  base.py  issue.py  ml.py  profile.py  repo.py  user.py
core/parsing/: __init__.py  issue_parser.py  quality_checker.py  skill_extractor.py
core/profile/: __init__.py  dev_profile.py
core/repositories/: __init__.py  base.py  issue_repository.py  profile_repository.py  repo_metadata_repository.py  user_repository.py
core/scoring/: __init__.py  feature_extractor.py  issue_scorer.py  ml_trainer.py
core/security/: __init__.py  encryption.py  rate_limiter.py  validation.py
core/services/: __init__.py  github_service.py  scoring_service.py
docker/: env.example
docker/postgres/: init.sql
docs/: GITHUB_ACTIONS_SETUP.md  QUICKSTART.md  README.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx  App.test.jsx
frontend/src/api/: client.js  client.test.js
frontend/src/components/: FirstLoginPrompt.css  FirstLoginPrompt.jsx  FirstLoginPrompt.test.jsx
frontend/src/components/Layout/: Header.css  Header.jsx  Header.test.jsx  Layout.css  Layout.jsx  Layout.test.jsx  index.js
frontend/src/components/common/: Badge.css  Badge.jsx  Badge.test.jsx  Button.css  Button.jsx  Button.test.jsx  Card.css  Card.jsx  Card.test.jsx  Loader.css  Loader.jsx  Loader.test.jsx  PreloadLink.jsx  Skeleton.css  Skeleton.jsx  Skeleton.test.jsx  index.js
frontend/src/constants/: index.js
frontend/src/context/: AuthContext.jsx  AuthContext.test.jsx  ThemeContext.jsx
frontend/src/hooks/: index.js  useApiQueries.js  useApiQueries.test.jsx  useCancelableRequest.js  useCancelableRequest.test.js  useDebounce.js  useDebounce.test.js  useQueryHelpers.js  useVirtualization.js  useVirtualization.test.js
frontend/src/pages/: AuthCallback.css  AuthCallback.jsx  AuthCallback.test.jsx  Dashboard.css  Dashboard.jsx  Dashboard.test.jsx  Issues.css  Issues.jsx  Issues.test.jsx  LabeledIssues.css  LabeledIssues.jsx  LabeledIssues.test.jsx  Login.css  Login.jsx  Login.test.jsx  MLTraining.css  MLTraining.jsx  MLTraining.test.jsx  Profile.css  Profile.jsx  Profile.test.jsx  index.js
frontend/src/styles/: global.css  variables.css
frontend/src/test/: setup.js  test-utils.jsx
frontend/src/test/mocks/: handlers.js  server.js
frontend/src/utils/: queryClient.js  queryClient.test.js  queryKeys.js  queryKeys.test.js  routePreloader.js
infrastructure/docker/: env.example
infrastructure/docker/postgres/: init.sql
scripts/: security-check.sh
tests/: __init__.py  conftest.py  test_base_repository.py  test_database.py  test_datetime_regressions.py  test_edge_cases.py  test_github_graphql_variables.py  test_integration.py  test_middleware.py  test_ml.py  test_ml_advanced.py  test_parsing.py  test_scoring.py  test_stream_processor.py
tests/backend/: conftest.py  test_auth.py  test_cache_init_lock.py  test_csrf.py  test_issue_filters.py  test_issues.py  test_jobs_api.py  test_ml_api.py  test_profile.py  test_scoring.py  test_staleness.py
workers/: __init__.py  celery_app.py  schedules.py
workers/tasks/: __init__.py  discovery_tasks.py  ml_tasks.py  scoring_tasks.py  staleness_tasks.py
