[project]
name = "contribution-matcher"
version = "1.0.0"
description = "Match developers with open source contribution opportunities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Contribution Matcher Team"}
]
keywords = ["open-source", "github", "contributions", "matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "frontend",
    "migrations",
    "alembic",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from (sometimes intentional)
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "SIM108", # use ternary operator (not always cleaner)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "backend", "workers"]
force-single-line = false
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend
  | migrations
  | alembic
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests",
    "frontend",
    "migrations",
    "alembic",
]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["core", "backend"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 50
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage_html"
