[project]
name = "contribution-matcher"
version = "1.0.0"
description = "Match developers with open source contribution opportunities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Contribution Matcher Team"}
]
keywords = ["open-source", "github", "contributions", "matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "frontend",
    "migrations",
    "alembic",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "B008",
    "B904",
    "ARG001",
    "ARG002",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["core", "backend", "workers"]
force-single-line = false
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend
  | migrations
  | alembic
)/
'''

[tool.mypy]
python_version = "3.10"
# Disable strict warnings
warn_return_any = false
warn_unused_configs = true
warn_unreachable = false
warn_no_return = false
# Allow untyped code
ignore_missing_imports = true
allow_untyped_calls = true
allow_untyped_defs = true
allow_incomplete_defs = true
check_untyped_defs = false
# Less strict Optional handling
no_implicit_optional = false
strict_optional = false
# Allow common patterns
allow_redefinition = true
allow_untyped_decorators = true
allow_subclassing_any = true
allow_untyped_globals = true
# Disable strict checking
disallow_any_generics = false
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
# Exclude patterns
exclude = [
    "tests",
    "frontend",
    "migrations",
    "alembic",
]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "core.scoring.ml_trainer",
    "core.scoring.feature_extractor",
    "backend.app.services.ml_service",
    "core.services.scoring_service",
]
# ML/numpy code often has complex type issues
allow_untyped_calls = true
allow_untyped_defs = true
warn_return_any = false
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "core.cache.decorators",
    "workers.tasks.*",
]
# Decorators and async tasks often have complex typing
allow_untyped_calls = true
allow_untyped_defs = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "core.repositories.base",
    "core.repositories.issue_repository",
]
# SQLAlchemy repositories have complex generic typing
allow_untyped_calls = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "core.api.github_api",
    "core.services.github_service",
    "core.profile.dev_profile",
]
# External API integrations often have complex return types
allow_untyped_calls = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "backend.app.routers.*",
    "backend.app.services.*",
    "backend.app.error_handlers",
]
# FastAPI routes and services
allow_untyped_calls = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "core.cache.decorators",
    "core.cache.redis_client",
    "core.repositories.base",
    "core.repositories.issue_repository",
    "core.security.rate_limiter",
]
# Complex generic typing and decorator patterns
allow_untyped_calls = true
warn_return_any = false
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "core.parsing.issue_parser",
    "core.api.github_api",
    "core.profile.dev_profile",
    "core.services.github_service",
    "core.services.scoring_service",
    "backend.app.services.staleness_service",
    "backend.app.services.ml_service",
    "workers.tasks.*",
]
# Complex type patterns that are difficult to type precisely
allow_untyped_calls = true
warn_return_any = false
ignore_errors = false

[tool.coverage.run]
source = ["core", "backend"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 35
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage_html"
